Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Bus_Procs_Plan_Count__c.field-meta.xml
<CustomField>
    <fullName>Bus_Procs_Plan_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Roll up of Business Process Plan records, updated via a trigger on Business Process Plan object</description>
    <label>Bus. Procs. Plan Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>