Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Buying_Behavior_Evaluation_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Buying_Behavior_Evaluation_Criteria__c</fullName>
    <inlineHelpText>Value-Based (TCO Evaluation): Considers total lifecycle cost, including instruments, consumables, and service—not just purchase price. 
Price-Driven (Upfront Cost Focus): Focuses mainly on upfront instrument price.</inlineHelpText>
    <label>Buying Behavior – Evaluation Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value-Based (TCO Evaluation)</fullName>
            </value>
            <value>
                <fullName>Price-Driven (Upfront Cost Focus)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>