Perkin-UAT/force-app/main/default/objects/Opportunity/fields/CALP_Case__c.field-meta.xml
<CustomField>
    <fullName>CALP_Case__c</fullName>
    <description>reference CALP case #</description>
    <label>CALP Case #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>