Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Case_Active_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Active_Contract_Type__c</fullName>
    <formula>/*Service_Case__r.Asset.Active_Contract_Type__c*/
&quot;&quot;</formula>
    <label>Case - Active Contract Type</label>
    <type>Text</type>
</CustomField>