Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Case_Asset__c.field-meta.xml
<CustomField>
    <fullName>Case_Asset__c</fullName>
    <formula>/*Service_Case__r.Asset.Name*/
&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case - Asset</label>
    <type>Text</type>
</CustomField>