Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Case_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Case_Number__c</fullName>
    <description>Service Case Number</description>
    <formula>/*Service_Case__r.CaseNumber*/
&quot;&quot;</formula>
    <inlineHelpText>Service Case Number</inlineHelpText>
    <label>Case - Case Number</label>
    <type>Text</type>
</CustomField>