Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Case_Primary_Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Case_Primary_Contact_Account__c</fullName>
    <description>Primary Contact&#39;s Account Name</description>
    <formula>/*Service_Case__r.Account.Name*/
&quot;&quot;</formula>
    <inlineHelpText>Primary Contact&#39;s Account Name</inlineHelpText>
    <label>Case - Primary Contact Account</label>
    <type>Text</type>
</CustomField>