Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Case_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Primary_Contact_Email__c</fullName>
    <formula>/*Service_Case__r.Contact.Email*/
&quot;&quot;</formula>
    <label>Case - Primary Contact Email</label>
    <type>Text</type>
</CustomField>