Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Case_Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Primary_Contact_Name__c</fullName>
    <description>Service Case Contact Name</description>
    <formula>/*Service_Case__r.Contact.FirstName + &#39; &#39; + Service_Case__r.Contact.LastName*/
&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Service Case Contact Name</inlineHelpText>
    <label>Case - Primary Contact Name</label>
    <type>Text</type>
</CustomField>