Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Case_Primary_Contact_Street__c.field-meta.xml
<CustomField>
    <fullName>Case_Primary_Contact_Street__c</fullName>
    <description>Primary Contact Street</description>
    <formula>/*Service_Case__r.Contact.MailingStreet*/
&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary Contact Street</inlineHelpText>
    <label>Case - Primary Contact Street</label>
    <type>Text</type>
</CustomField>