Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Case_Reason_for_Service__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_for_Service__c</fullName>
    <description>Reason for service</description>
    <formula>/*Service_Case__r.Reason_for_Service__c*/
&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reason for service</inlineHelpText>
    <label>Case - Reason for Service</label>
    <type>Text</type>
</CustomField>