Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution__c</fullName>
    <description>Resolution for the case</description>
    <formula>/*Service_Case__r.Resolution__c*/
&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Resolution for the case</inlineHelpText>
    <label>Case - Resolution</label>
    <type>Text</type>
</CustomField>