Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Case_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Serial_Number__c</fullName>
    <description>Asset serial number</description>
    <formula>/*Service_Case__r.Asset.SerialNumber*/
&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Asset serial number</inlineHelpText>
    <label>Case - Serial Number</label>
    <type>Text</type>
</CustomField>