Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <description>Case subject</description>
    <formula>/*Service_Case__r.Subject*/
&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case subject</inlineHelpText>
    <label>Case - Subject</label>
    <type>Text</type>
</CustomField>