Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Case_Testing__c.field-meta.xml
<CustomField>
    <fullName>Case_Testing__c</fullName>
    <description>Testing</description>
    <formula>/*Service_Case__r.Testing__c*/
&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Testing</inlineHelpText>
    <label>Case - Testing</label>
    <type>Text</type>
</CustomField>