Perkin-UAT/force-app/main/default/objects/Opportunity/fields/CFI_Percentage__c.field-meta.xml
<CustomField>
    <fullName>CFI_Percentage__c</fullName>
    <formula>if( ISPICKVAL( Funding__c , &quot;CFI Awarded&quot;) ,&quot;CFI&quot;,if(ISPICKVAL( Funding__c , &quot;CFI Application&quot;),&quot;CFI&quot;,if(ISPICKVAL( Funding__c , &quot;CFI All Monies Received&quot;),&quot;CFI&quot;,&quot;non-CFI&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CFI Percentage</label>
    <type>Text</type>
</CustomField>