Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <description>This pick list helps to associate opportunities to influencing partners.</description>
    <label>Channel Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accenture</fullName>
            </value>
            <value>
                <fullName>Deloitte</fullName>
            </value>
            <value>
                <fullName>TCS (Tata)</fullName>
            </value>
            <value>
                <fullName>Cognizant</fullName>
            </value>
            <value>
                <fullName>Intertek</fullName>
            </value>
            <value>
                <fullName>Neta</fullName>
            </value>
            <value>
                <fullName>SGS</fullName>
            </value>
            <value>
                <fullName>Charles River</fullName>
            </value>
            <value>
                <fullName>VWR</fullName>
            </value>
            <value>
                <fullName>Eurofins</fullName>
            </value>
            <value>
                <fullName>Bureau Veritas</fullName>
            </value>
            <value>
                <fullName>PPD</fullName>
            </value>
            <value>
                <fullName>Liquidity Services</fullName>
            </value>
            <value>
                <fullName>JLL</fullName>
            </value>
            <value>
                <fullName>CBRE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>