Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Cleared_RevRec__c.field-meta.xml
<CustomField>
    <fullName>Cleared_RevRec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cleared RevRec</label>
    <type>Checkbox</type>
</CustomField>