Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Client_Deliverable_Requested__c.field-meta.xml
<CustomField>
    <fullName>Client_Deliverable_Requested__c</fullName>
    <label>Client Deliverable Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Proposal</fullName>
            </value>
            <value>
                <fullName>Budget &amp; Assumptions</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>