Perkin-UAT/force-app/main/default/objects/Opportunity/fields/COLLABORATE__c.field-meta.xml
<CustomField>
    <fullName>COLLABORATE__c</fullName>
    <label>COLLABORATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0. No documentation of client conversations</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1. Buyer Comm. email agreed upon by Sponsor</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2. Buying and decision process shared by Power</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3. Buyer Comm. email &amp; plan agreed upon by Power</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4. Mutual agreement on first Go/No Go (Power)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5. Mutual agreement on final Go/No Go (Power)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>