Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Comments_about_spiff__c.field-meta.xml
<CustomField>
    <fullName>Comments_about_spiff__c</fullName>
    <label>Comments about spiff</label>
    <type>TextArea</type>
</CustomField>