Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Commit_INF__c.field-meta.xml
<CustomField>
    <fullName>Commit_INF__c</fullName>
    <label>Commit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <color>#419249</color>
                <label>Yes</label>
            </value>
            <value>
                <fullName>Upside</fullName>
                <color>#E27001</color>
                <label>Upside</label>
            </value>
            <value>
                <fullName>No</fullName>
                <color>#FFFF66</color>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>