Perkin-UAT/force-app/main/default/objects/Opportunity/fields/CompEdgeNum__c.field-meta.xml
<CustomField>
    <fullName>CompEdgeNum__c</fullName>
    <formula>if(ispickval( Competitive_Edge__c ,&quot;Sole source&quot;),20,if(ispickval( Competitive_Edge__c ,&quot;Good rapport, preferred or favoured vendor&quot;),10,if(ispickval( Competitive_Edge__c ,&quot;Competitors still being seriously considered&quot;),5,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompEdgeNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>