Perkin-UAT/force-app/main/default/objects/Opportunity/fields/COMPELLING_REASON_TO_ACT_CRTA__c.field-meta.xml
<CustomField>
    <fullName>COMPELLING_REASON_TO_ACT_CRTA__c</fullName>
    <label>COMPELLING REASON TO ACT (CRTA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0. No compelling reason to act identified</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1. Action tied to a specific initiative, pain or goal</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2. Sponsor shared a specific date for action</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3. Documented CRTA agreed upon by Sponsor</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4. Power shared a specific date for action</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5. Documented CRTA agreed upon by Power</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>