Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Competitive_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Intelligence__c</fullName>
    <label>Competitive Intelligence</label>
    <type>TextArea</type>
</CustomField>