Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Competitor_Detail__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Detail__c</fullName>
    <description>Created by PwC as part of SC-540</description>
    <label>Competitor Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Competitor_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avantor</fullName>
            </value>
            <value>
                <fullName>Fisher Scientific</fullName>
            </value>
            <value>
                <fullName>Authorized Distributor / Reseller</fullName>
            </value>
            <value>
                <fullName>PKI Agent / Reseller</fullName>
            </value>
            <value>
                <fullName>Agilent</fullName>
            </value>
            <value>
                <fullName>Bruker</fullName>
            </value>
            <value>
                <fullName>Shimadzu</fullName>
            </value>
            <value>
                <fullName>Thermo</fullName>
            </value>
            <value>
                <fullName>Waters</fullName>
            </value>
            <value>
                <fullName>Mettler</fullName>
            </value>
            <value>
                <fullName>Glass Expansion</fullName>
            </value>
            <value>
                <fullName>Meinhard / Elemental Scientific</fullName>
            </value>
            <value>
                <fullName>Spectron</fullName>
            </value>
            <value>
                <fullName>Precision Glass</fullName>
            </value>
            <value>
                <fullName>Restek</fullName>
            </value>
            <value>
                <fullName>Details will be filled in field “Closed Reason Detail”</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>