Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Competitor_Model__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Model__c</fullName>
    <inlineHelpText>Please fill in Competitor&#39;s Instrument Model No.</inlineHelpText>
    <label>Competitor Model</label>
    <length>16</length>
    <type>Text</type>
</CustomField>