Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Competitor_Price__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Price__c</fullName>
    <label>Competitor Price</label>
    <length>12</length>
    <type>Text</type>
</CustomField>