Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Competitor_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Strengths__c</fullName>
    <label>Competitor Strengths</label>
    <length>255</length>
    <type>Text</type>
</CustomField>