Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Completed_task_orders__c.field-meta.xml
<CustomField>
    <fullName>Completed_task_orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed task orders</label>
    <type>Checkbox</type>
</CustomField>