Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Components__c.field-meta.xml
<CustomField>
    <fullName>Components__c</fullName>
    <label>Components</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADB</fullName>
            </value>
            <value>
                <fullName>ASM</fullName>
            </value>
            <value>
                <fullName>AVM</fullName>
            </value>
            <value>
                <fullName>BM (OM, CIM)</fullName>
            </value>
            <value>
                <fullName>BSM</fullName>
            </value>
            <value>
                <fullName>Core (CM, PE, SIM, SRM, TVC, FinchDocs)</fullName>
            </value>
            <value>
                <fullName>GAIT-GM</fullName>
            </value>
            <value>
                <fullName>GAIT-SS</fullName>
            </value>
            <value>
                <fullName>GDM</fullName>
            </value>
            <value>
                <fullName>GriD</fullName>
            </value>
            <value>
                <fullName>iFinch</fullName>
            </value>
            <value>
                <fullName>LDAP</fullName>
            </value>
            <value>
                <fullName>LMX</fullName>
            </value>
            <value>
                <fullName>OOM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>