Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Compound_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Compound_Receipt_Date__c</fullName>
    <label>Compound Receipt Date</label>
    <type>Date</type>
</CustomField>