Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who was the rep that referred this lead?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Who was the rep that referred this lead?)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>