Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Contract_Renewal_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Error_Log__c</fullName>
    <description>Field for storing Error logs for Contract Renewal process, added by PWC. SC-391</description>
    <label>Contract Renewal Error Log</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>