Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Contract_Request__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request__c</fullName>
    <label>Contract Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>