Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Conversion_SLA_Sales__c.field-meta.xml
<CustomField>
    <fullName>Conversion_SLA_Sales__c</fullName>
    <description>ANNUITAS PDG Program</description>
    <label>Conversion SLA - Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity SLA In-policy</fullName>
            </value>
            <value>
                <fullName>Opportunity SLA Out-of-policy</fullName>
            </value>
            <value>
                <fullName>Opportunity SLA Out-of-policy Completed</fullName>
            </value>
            <value>
                <fullName>Opportunity SLA In-policy Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>