Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Count_of_last_modified_date__c.field-meta.xml
<CustomField>
    <fullName>Count_of_last_modified_date__c</fullName>
    <formula>IF( DATEVALUE( LastModifiedDate) = TODAY(), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of last modified date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>