Perkin-UAT/force-app/main/default/objects/Opportunity/fields/CountofChildOpps__c.field-meta.xml
<CustomField>
    <fullName>CountofChildOpps__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Child Opps on this Opp</description>
    <inlineHelpText>Total Child Opps on this Opp</inlineHelpText>
    <label>Count of Child Opps(INF)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>