Perkin-UAT/force-app/main/default/objects/Opportunity/fields/CountofConsummableProducts__c.field-meta.xml
<CustomField>
    <fullName>CountofConsummableProducts__c</fullName>
    <description>this is filled by a L.FLOW for products that are marked a Consumable. If Opp has a consumable, then it can not Quick Close.</description>
    <inlineHelpText>this is filled by a L.FLOW for products that are marked a Consumable. If Opp has a consumable, then it can not Quick Close.</inlineHelpText>
    <label>Count of Consummable Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>