Perkin-UAT/force-app/main/default/objects/Opportunity/fields/CountofContracts__c.field-meta.xml
<CustomField>
    <fullName>CountofContracts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of contracts on Opp</description>
    <inlineHelpText>Total number of contracts on Opp</inlineHelpText>
    <label>Count of Contracts(INF)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>