Perkin-UAT/force-app/main/default/objects/Opportunity/fields/CountofOrders__c.field-meta.xml
<CustomField>
    <fullName>CountofOrders__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used by Declarative Lookup Rollup Helper to get a count of orders on this Opportunity</description>
    <inlineHelpText>count of orders on this Opportunity</inlineHelpText>
    <label>Count of Orders(INF)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>