Perkin-UAT/force-app/main/default/objects/Opportunity/fields/CountofRenewalProducts__c.field-meta.xml
<CustomField>
    <fullName>CountofRenewalProducts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is used by Declarative Lookup Rollup Helper to determine how many products are renewable on this opportunity</description>
    <inlineHelpText>how many products are renewable on this opportunity</inlineHelpText>
    <label>Count of Renewal Products(INF)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>