Perkin-UAT/force-app/main/default/objects/Opportunity/fields/CountofServiceProducts__c.field-meta.xml
<CustomField>
    <fullName>CountofServiceProducts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is used by Declarative Rollup Lookup Helper to get the total products on this opportunity where they are services.</description>
    <inlineHelpText>Products that are Service</inlineHelpText>
    <label>Count of Service Products(INF)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>