Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Coversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Coversion_Type__c</fullName>
    <label>Coversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>W-C</fullName>
            </value>
            <value>
                <fullName>B-C</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>