Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Current_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Quote_Number__c</fullName>
    <description>Updated by PwC as part of SC-370 - field label updated</description>
    <label>Quote #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>