Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Customer_Impl_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Impl_Code__c</fullName>
    <label>Customer Impl Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code 1 - (Regulated Solution)</fullName>
            </value>
            <value>
                <fullName>Code 2 - (Entrp Solution w/Sol. Servs)</fullName>
            </value>
            <value>
                <fullName>Code 3 - (Solution w/o Sol. Services)</fullName>
            </value>
            <value>
                <fullName>Code 4 - (Hosted Solution)</fullName>
            </value>
            <value>
                <fullName>Code 5a - (FinchLab Hosted)</fullName>
            </value>
            <value>
                <fullName>Code 5b - (FinchLab On-Site)</fullName>
            </value>
            <value>
                <fullName>Code 5c - (FinchLab Next Gen On-Site)</fullName>
            </value>
            <value>
                <fullName>Code 5d (FinchLab Next Gen Hosted)</fullName>
            </value>
            <value>
                <fullName>Code 6a - (iFinch Hosted)</fullName>
            </value>
            <value>
                <fullName>Code 6b - (iFinch On-Site)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>