Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Customer_Introduced_to_Concept__c.field-meta.xml
<CustomField>
    <fullName>Customer_Introduced_to_Concept__c</fullName>
    <label>Customer Introduced to Concept</label>
    <type>Date</type>
</CustomField>