Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Customer_Responded__c.field-meta.xml
<CustomField>
    <fullName>Customer_Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Responded?</label>
    <type>Checkbox</type>
</CustomField>