Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Customer_T_C_Review__c.field-meta.xml
<CustomField>
    <fullName>Customer_T_C_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by PwC as part of SC-516</description>
    <label>Customer T&amp;C Review</label>
    <type>Checkbox</type>
</CustomField>