Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Customer_WANTS__c.field-meta.xml
<CustomField>
    <fullName>Customer_WANTS__c</fullName>
    <inlineHelpText>The WANT is where the customer desires to be at….the difference is the GAP and this is where the rep. must focus.</inlineHelpText>
    <label>Customer WANTS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>