Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Customer_Will_Accept_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Will_Accept_Date__c</fullName>
    <inlineHelpText>If the customer is not ready to receive the purchase as soon as it&#39;s placed, please enter the earliest data that the customer is ready to accept</inlineHelpText>
    <label>Customer Will Accept Date</label>
    <type>DateTime</type>
</CustomField>