Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Customer_Will_Accept_Delivery_ASAP__c.field-meta.xml
<CustomField>
    <fullName>Customer_Will_Accept_Delivery_ASAP__c</fullName>
    <inlineHelpText>Is the customer ready to accept delivery as soon as the purchase porder is placed?</inlineHelpText>
    <label>Customer Will Accept Delivery ASAP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>